updated the license

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@ end
         <a href="http://search.yahoo.com/" title="Yahoo Search">Yahoo</a> or <a href="http://search.msn.com/" title="MSN Search">MSN</a>.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="http://github.com/orderedlist">Steve Smith</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>This project is maintained by <a href="http://github.com/sprinklej">Joel Sprinkle</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a>, modified by <a href="https://github.com/sprinklej">sprinklej</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
