--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
       <header>
         <h1>Joel Sprinkle</h1>
         <p>Hello World!</p>
-        <p class="view"><a href="http://github.com/sprinklej">Projects</a>
-			<br/>About<br/>Resume</p>
+        <p class="view"><a href="#projects">Projects</a>
+			<br/><a href="#about">About</a>
+			<br/><a href="#resume">Resume</a></p>
       </header>
       <section>
-        <h1>#Projects</h1>
+        <h1 id="projects">#Projects</h1>
 
-       	<h1>#About</h1>
+       	<h1 id="about">#About</h1>
 		
-		<h1>#Resume</h1>
+		<h1 id="resume">#Resume</h1>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a>, modified by <a href="https://github.com/sprinklej">sprinklej</a></small></p>
