added some content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Joel Sprinkle</title>
 
+	<script type="text/javascript" src="javascripts/scripts.js"></script>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width">
@@ -16,20 +17,127 @@
     <div class="wrapper">
       <header>
         <h1>Joel Sprinkle</h1>
+		<img src="images/Me/me.jpg" alt="Me" width="200">
         <p>Hello World!</p>
-        <p class="view"><a href="#projects">Projects</a>
-			<br/><a href="#about">About</a>
-			<br/><a href="#resume">Resume</a></p>
+	    <a href="#projects">Projects</a><br>
+		<a href="#about">About</a><br>
+		<a href="#resume">Resume</a>
       </header>
       <section>
         <h1 id="projects">#Projects</h1>
+		<h2>MusicXML Parser</h2>
+		<img src="images/Projects/musicXML Screen Shot.png" alt="musicXML Screen Shot">
+		<p>MusicXML Parser was my honours project, it is a Java/JavaFX based project that keeps track of and parses musicXML files. MusicXML files store sheet music in a plain text format using XML. The purpose of this project was to build the foundatins of an application where musicians can keep all of their digital sheet music (stored as musicXML files) in one place. Keeping digital sheet music in plain text allows the music to be more easily transposed or edited, verses the more common way of storing digital sheet music as PDFs.
+		<br><br><a href="https://service.scs.carleton.ca/content/honours-project-joel-sprinkle" target="_blank">Abstract</a>
+		<br><a href="https://github.com/sprinklej/musicXML" target="_blank">Code</a></p>
+
+
+		<h2>Ubuntu Server</h2>
+		<img class="imgshadow" src="images/Projects/Ajenti dashboard.png" alt="Ajenti Dashboard" width="450">
+		<p>I wanted a NAS device, and after looking at several NAS devices that were available for purchase, I realized that I wanted more than just a NAS device. I wanted something that not only provided more functionality, but also something that I could play around with. So I decided to put together an Ubuntu server, which provides me with the functionality of not only a NAS device but also something that I can tinker with. As well, putting together your own Ubuntu server provides a good learning opportunity.</p>
+		
+		<h3>Hardware</h3>
+		<p>After doing some research I was able to find a refurbished PC with a dual-core processor and 4GB of RAM. More power than I need on the cheap, perfect. However, the 80GB hard drive that it came with would not be nearly enough space, so I also stuck in an additional 2TB drive, and with that the hardware is complete.</p>
+		
+		<h3>Software</h3>
+		<p>This list covers software that I use most often. Know of any other useful pieces of software, let me know!</p>
+		<ul>
+		  <li><a href="https://www.ubuntu.com/server" target="_blank">Ubuntu Server 16.04 LTS</a></li>
+		  <li><a href="https://www.samba.org" target="_blank">Samba</a> - SMB shares</li>
+		  <li><a href="https://www.cups.org" target="_blank">CUPS</a> - Print server for a USB printer</li>
+		  <ul class="sublist">
+		    <li>Fun Fact: You can setup CUPS so that you are able to print wirelessly print from iOS devices to your printer(s)</li>
+		  </ul>
+		  <li><a href="https://www.plex.tv" target="_blank">Plex</a> - Media server</li>
+		  <li><a href="https://www.duckdns.org" target="_blank">Duck DNS</a> - DNS services</li>
+		  <li><a href="http://ajenti.org" target="_blank">Ajenti</a> - Provides a web interface to monitor your server. Allows you to add cron jobs, setup Samba shares, upgrade packages, as well as many other functions.</li>
+		</ul>
+
+		<h2>cuPID</h2>
+		<img class="imgshadow" src="images/Projects/cuPID Login Screen.png" alt="cuPID Screen Shot" width="255">
+		<p>Carleton University Project Partner IDentifier was a group project for COMP 3004, it matches students into teams based on the students qualifications. Some of the qualifications include grades, communication skills, and creativity. The application is C++ based, it uses Qt Framework for the GUI and it is connected to a SQLite database to keep track of the students and groups. As well the project was built in Ubnutu 14.04 LTS Desktop version.
+		<br><br><a href="https://github.com/sprinklej/00100100" target="_blank">Code</a></p>
+		</p>
+
+		<hr class="style-two">
 
        	<h1 id="about">#About</h1>
 		
+		<p>Hi, Im Joel Sprinkle (yes that is my real last name). I am software developer that just graduated from Carleton University. When I'm not sitting behind a computer, on any given thursday or friday evening I can usually be found bouldering at <a href="http://www.altitudegym.ca" target="_blank">Altitude</a> rock climbing gym. During the winter I turn into an indoor kid, spending a lot of time watching movies/tv. For the most part I like fantasy, sci-fi, and comedies, so everything from <strike>Battlestar Galactica Wars Trek</strike> Battlestar Galatica/Star Trek/Star Wars, to Park and Rec/Modern Family. During the summer months I enjoy getting outside whether that is on my bike, my skateboard, or just out for a walk.</p>
+		
+		<img class="imgshadow" src="images/Me/bouldering in BC.jpg" alt="Bouldering at Juan de Fuca Botanical Beach" width="400">
+  		
+		<p>I am a genuinely curious person. Have you ever had someone get annoyed with you because you ask why to much? I have...</p>
+	    <blockquote><p>I have no special talents. I am only passionately curious. – Albert Einstein</p></blockquote>
+		<p>I believe that as longs as a person stays curious they can learn to do anything. My own unrelentless thirst to know how everything works, has definitally gotten me to where I am today.</p>
+		
+		
+		<hr class="style-two">
+		
 		<h1 id="resume">#Resume</h1>
+		
+		<p>Hey, as I mentioned above, I just graduated from Carleton University and I am actively looking for full-time employment in the software development world. If you are interested in hiring me check out my LinkedIn or drop me an email.</p> 
+		
+		<h2>Skills</h2>
+        <ul>
+          <li>Languages: C, C++, Java, JavaScript, Python</li>
+		  <li>Completed <a href="https://www.codecademy.com" target="_blank">codecademy</a> courses on: HTML & CSS, JavaScript, jQuery, Ruby</li>
+	    </ul>
+		
+		<h2>Related Work Experience</h2>
+		<h3>Cote Business Systems 2011 – 2014</h3>
+		<h4>IT Consulting</h4>
+        <ul>
+          <li>Onsite: diagnosing hardware failures, upgrading hardware and software, network setup, and setting up new hardware</li>
+          <li>Remote: help with email/Outlook, login issues, installing new software, and removing adware</li>
+          <li>Worked onsite for Cineplex Odeon as the eyes, ears, and hands of the remote IT team</li>
+		  <li>Programmed scripts to improve user workflows</li>
+        </ul>
+		
+		<h2>Other Work Experience</h2>
+		<h3>The Wellington Diner 2015 – Present</h3>
+		<p>Line Cook</p>
+		<ul>
+	      <li>Main duties include: working the line, doing prep-work, opening and closing the line, and cleaning the line/equipment</li>
+		</ul>
+		
+		<h3>Original Joe’s Restaurant & Bar	2005 – 2011</h3>
+		<h4>Kitchen Manager 2008 – 2011</h4>
+		<ul>
+	      <li>Main duties: Skilled in all regular kitchen duties, responsible for scheduling, placing grocery orders, managing inventory, hiring and training new staff, leading team meetings</li>
+		  <li>Other roles: Helped setup new franchise locations, catering private events</li>
+		</ul>
+		<h4>Line Cook 2005 – 2008</h4>
+		<ul>
+	      <li>Main duties: Working at all stations - grill, salads and pastas, plating food, expediting food and ensuring quality. Opening and closing the line. Cleaning the line and equipment</li>
+		</ul>
+		
+		
+		<h2>Education</h2>
+		
+		<h3>Carleton University	2014 - 2017</h3>
+        <ul>
+		  <li>Graduated With High Distinction</li>
+          <li>Bachelor of Computer Science Honours, Software Engineering Stream</li>
+		  <li>Carleton University Entrance Scholarship (2014)</li>
+		  <li>Henry Marshall Tory Scholarship (2015)</li>
+		  <li>Chalmers jack MacKenzie Scholarship (2016)</li>
+		  <li>Dean's Honour List (2015, 2016)</li>
+		</ul>
+		
+		<h3>MacEwan University 2011 - 2014</h3>
+        <ul>
+          <li>Major: Computer Science</li>
+		  <li>Minor: Earth Sciences</li>
+		</ul>
+		
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a>, modified by <a href="https://github.com/sprinklej">sprinklej</a></small></p>
+		<p><script type="text/javascript">writeMe();</script><img src="images/Write/318-108266.jpg" height="32"></a>
+		<a href="https://github.com/sprinklej" target="_blank"><img src="images/GitHub/GitHub-Mark-32px.png" alt="GitHub"</a>
+		<a href="http://linkedin.com/in/JoelSprinkle" target="_blank"><img src="images/LinkedIn/In-2CRev-34px-R.png" alt="LinkedIn" height="32"</a></p>
+        
+		<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist" target="_blank">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
