--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1>Joel Sprinkle</h1>
-		<img src="images/Me/me.jpg" alt="Me" width="200">
+		<img src="/images/Me/me.jpg" alt="Me" width="200">
         <p>Hello World!</p>
 	    <a href="#projects">Projects</a><br>
 		<a href="#about">About</a><br>
