--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <h1 id="projects">#Projects</h1>
 		<h2>MusicXML Parser</h2>
 		<img src="images/Projects/musicXML Screen Shot.png" alt="musicXML Screen Shot">
-		<p>MusicXML Parser was my honours project, it is a Java/JavaFX based project that keeps track of and parses musicXML files. MusicXML files store sheet music in a plain text format using XML. The purpose of this project was to build the foundatins of an application where musicians can keep all of their digital sheet music (stored as musicXML files) in one place. Keeping digital sheet music in plain text allows the music to be more easily transposed or edited, verses the more common way of storing digital sheet music as PDFs.
+		<p>MusicXML Parser was my honours project, it is a Java/JavaFX based project that keeps track of and parses musicXML files. MusicXML files store sheet music in a plain text format using XML. The purpose of this project was to build the foundations of an application where musicians can keep all of their digital sheet music (stored as musicXML files) in one place. Keeping digital sheet music in plain text allows the music to be more easily transposed or edited, versus the more common way of storing digital sheet music as PDFs.
 		<br><br><a href="https://service.scs.carleton.ca/content/honours-project-joel-sprinkle" target="_blank">Abstract</a>
 		<br><a href="https://github.com/sprinklej/musicXML" target="_blank">Code</a></p>
 
 
 		<h2>Ubuntu Server</h2>
 		<img class="imgshadow" src="images/Projects/Ajenti dashboard.png" alt="Ajenti Dashboard" width="450">
-		<p>I wanted a NAS device, and after looking at several NAS devices that were available for purchase, I realized that I wanted more than just a NAS device. I wanted something that not only provided more functionality, but also something that I could play around with. So I decided to put together an Ubuntu server, which provides me with the functionality of not only a NAS device but also something that I can tinker with. As well, putting together your own Ubuntu server provides a good learning opportunity.</p>
+		<p>I wanted a NAS device, and after looking at several NAS devices that were available for purchase, I realized that I wanted more than just a NAS device. I wanted something that not only provided more functionality, but also something that I could play around with. So I decided to put build an Ubuntu server, which provides me with the functionality of not only a NAS device but also something that I can tinker with. As well, putting together your own Ubuntu server provides a good learning opportunity.</p>
 		
 		<h3>Hardware</h3>
 		<p>After doing some research I was able to find a refurbished PC with a dual-core processor and 4GB of RAM. More power than I need on the cheap, perfect. However, the 80GB hard drive that it came with would not be nearly enough space, so I also stuck in an additional 2TB drive, and with that the hardware is complete.</p>
@@ -63,7 +63,7 @@
 
        	<h1 id="about">#About</h1>
 		
-		<p>Hi, Im Joel Sprinkle (yes that is my real last name). I am software developer that just graduated from Carleton University. When I'm not sitting behind a computer, on any given thursday or friday evening I can usually be found bouldering at <a href="http://www.altitudegym.ca" target="_blank">Altitude</a> rock climbing gym. During the winter I turn into an indoor kid, spending a lot of time watching movies/tv. For the most part I like fantasy, sci-fi, and comedies, so everything from <strike>Battlestar Galactica Wars Trek</strike> Battlestar Galatica/Star Trek/Star Wars, to Park and Rec/Modern Family. During the summer months I enjoy getting outside whether that is on my bike, my skateboard, or just out for a walk.</p>
+		<p>Hi, I'm Joel Sprinkle (yes that is my real last name). I am software developer that just graduated from Carleton University. When I'm not sitting behind a computer, on any given Thursday or Friday evening I can usually be found bouldering at <a href="http://www.altitudegym.ca" target="_blank">Altitude</a> rock climbing gym. During the winter I turn into an indoor kid, spending a lot of time watching movies/tv. For the most part I like fantasy, sci-fi, and comedies, so everything from <strike>Battlestar Galactica Wars Trek</strike> Battlestar Galatica/Star Trek/Star Wars, to Parks and Rec/Modern Family. During the summer months I enjoy getting outside whether that is on my bike, my skateboard, or just out for a walk.</p>
 		
 		<img class="imgshadow" id="myImg" src="images/Me/bouldering in BC.jpg" alt="Bouldering at Juan de Fuca Botanical Beach" width="300">
 		<!-- The Modal -->
@@ -78,7 +78,7 @@
 		
 		<p>I am a genuinely curious person. Have you ever had someone get annoyed with you because you ask why to much? I have...</p>
 	    <blockquote><p>I have no special talents. I am only passionately curious. – Albert Einstein</p></blockquote>
-		<p>I believe that as longs as a person stays curious they can learn to do anything. My own unrelentless thirst to know how everything works, has definitally gotten me to where I am today.</p>
+		<p>I believe that as long as a person stays curious they can learn to do anything. My own relentless thirst to know how everything works, has definitely gotten me to where I am today.</p>
 		
 		
 		<hr class="style-two">
