--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 		<h2>cuPID</h2>
 		<img class="imgshadow" src="images/Projects/cuPID Login Screen.png" alt="cuPID Screen Shot" width="255">
-		<p>Carleton University Project Partner IDentifier was a group project for COMP 3004, it matches students into teams based on the students qualifications. Some of the qualifications include grades, communication skills, and creativity. The application is C++ based, it uses Qt Framework for the GUI and it is connected to a SQLite database to keep track of the students and groups. As well the project was built in Ubnutu 14.04 LTS Desktop version.
+		<p>Carleton University Project Partner IDentifier was a group project for COMP 3004, it matches students into teams based on the students qualifications. Some of the qualifications include grades, communication skills, and creativity. The application is C++ based, it uses Qt Framework for the GUI and it is connected to an SQLite database to keep track of the students and groups. As well the project was built in Ubuntu 14.04 LTS Desktop version.
 		<br><br><a href="https://github.com/sprinklej/00100100" target="_blank">Code</a></p>
 		</p>
 
@@ -63,7 +63,7 @@
 
        	<h1 id="about">#About</h1>
 		
-		<p>Hi, I'm Joel Sprinkle (yes that is my real last name). I am software developer that just graduated from Carleton University. When I'm not sitting behind a computer, on any given Thursday or Friday evening I can usually be found bouldering at <a href="http://www.altitudegym.ca" target="_blank">Altitude</a> rock climbing gym. During the winter I turn into an indoor kid, spending a lot of time watching movies/tv. For the most part I like fantasy, sci-fi, and comedies, so everything from <strike>Battlestar Galactica Wars Trek</strike> Battlestar Galatica/Star Trek/Star Wars, to Parks and Rec/Modern Family. During the summer months I enjoy getting outside whether that is on my bike, my skateboard, or just out for a walk.</p>
+		<p>Hi, I'm Joel Sprinkle (yes that is my real last name). I am software developer that just graduated from Carleton University. When I'm not sitting behind a computer, on any given Thursday or Friday evening I can usually be found bouldering at <a href="http://www.altitudegym.ca" target="_blank">Altitude</a> rock climbing gym. During the winter I turn into an indoor kid, spending a lot of time watching movies/tv. For the most part I like fantasy, sci-fi, and comedies, so everything from <strike>Battlestar Galactica Wars Trek</strike> Battlestar Galactica/Star Trek/Star Wars, to Parks and Rec/Modern Family. During the summer months I enjoy getting outside whether that is on my bike, my skateboard, or just out for a walk.</p>
 		
 		<img class="imgshadow" id="myImg" src="images/Me/bouldering in BC.jpg" alt="Bouldering at Juan de Fuca Botanical Beach" width="300">
 		<!-- The Modal -->
@@ -76,9 +76,9 @@
 		  <div id="caption"></div>
 		</div>
 		
-		<p>I am a genuinely curious person. Have you ever had someone get annoyed with you because you ask why to much? I have...</p>
+		<p>I am a genuinely curious person. Have you ever had someone get annoyed with you because you ask why too much? I have...</p>
 	    <blockquote><p>I have no special talents. I am only passionately curious. – Albert Einstein</p></blockquote>
-		<p>I believe that as long as a person stays curious they can learn to do anything. My own relentless thirst to know how everything works, has definitely gotten me to where I am today.</p>
+		<p>I believe that as long as a person stays curious they can learn to do anything. My own relentless thirst to know how everything works has definitely gotten me to where I am today.</p>
 		
 		
 		<hr class="style-two">
