--- a/index.html
+++ b/index.html
@@ -143,10 +143,11 @@
       </section>
       <footer>
 		<p><script type="text/javascript">writeMe();</script><img src="images/Write/318-108266.jpg" height="32"></a>
-		<a href="https://github.com/sprinklej" target="_blank"><img src="images/GitHub/GitHub-Mark-32px.png" alt="GitHub"</a>
-		<a href="http://linkedin.com/in/JoelSprinkle" target="_blank"><img src="images/LinkedIn/In-2CRev-34px-R.png" alt="LinkedIn" height="32"</a></p>
+			<a href="https://github.com/sprinklej" target="_blank"><img src="images/GitHub/GitHub-Mark-32px.png" alt="GitHub"></a>
+			<a href="http://linkedin.com/in/JoelSprinkle" target="_blank"><img src="images/LinkedIn/In-2CRev-34px-R.png" alt="LinkedIn" height="32"></a>
+		</p>
         
-		<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist" target="_blank">orderedlist</a></small></p>
+		<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
