--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
       <section>
         <h1 id="projects">#Projects</h1>
 		<h2>MusicXML Parser</h2>
-		<img src="images/Projects/musicXML Screen Shot.png" alt="musicXML Screen Shot">
+		<img src="images/Projects/musicXML Screen Shot.png" title="musicXML screen shot" alt="musicXML screen shot">
 		<p>MusicXML Parser was my honours project, it is a Java/JavaFX based project that keeps track of and parses musicXML files. MusicXML files store sheet music in a plain text format using XML. The purpose of this project was to build the foundations of an application where musicians can keep all of their digital sheet music (stored as musicXML files) in one place. Keeping digital sheet music in plain text allows the music to be more easily transposed or edited, versus the more common way of storing digital sheet music as PDFs.
 		<br><br><a href="https://service.scs.carleton.ca/content/honours-project-joel-sprinkle" target="_blank">Abstract</a>
 		<br><a href="https://github.com/sprinklej/musicXML" target="_blank">Code</a></p>
 
 
 		<h2>Ubuntu Server</h2>
-		<img class="imgshadow" src="images/Projects/Ajenti dashboard.png" alt="Ajenti Dashboard" width="450">
+		<img class="imgshadow" src="images/Projects/Ajenti dashboard.png" title="Ajenti dashboard" alt="Ajenti dashboard" width="450">
 		<p>I wanted a NAS device, and after looking at several NAS devices that were available for purchase, I realized that I wanted more than just a NAS device. I wanted something that not only provided more functionality, but also something that I could play around with. So I decided to put build an Ubuntu server, which provides me with the functionality of not only a NAS device but also something that I can tinker with. As well, putting together your own Ubuntu server provides a good learning opportunity.</p>
 		
 		<h3>Hardware</h3>
@@ -54,7 +54,7 @@
 		</ul>
 
 		<h2>cuPID</h2>
-		<img class="imgshadow" src="images/Projects/cuPID Login Screen.png" alt="cuPID Screen Shot" width="255">
+		<img class="imgshadow" src="images/Projects/cuPID Login Screen.png" title="cuPID login screen" alt="cuPID login screen" width="255">
 		<p>Carleton University Project Partner IDentifier was a group project for COMP 3004, it matches students into teams based on the students qualifications. Some of the qualifications include grades, communication skills, and creativity. The application is C++ based, it uses Qt Framework for the GUI and it is connected to an SQLite database to keep track of the students and groups. As well the project was built in Ubuntu 14.04 LTS Desktop version.
 		<br><br><a href="https://github.com/sprinklej/00100100" target="_blank">Code</a></p>
 		</p>
