--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Joel Sprinkle</title>
 
 	<script type="text/javascript" src="javascripts/scripts.js"></script>
+	<script type="text/javascript" src="javascripts/analytics.js"></script>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width">
