--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
           <li>Bachelor of Computer Science Honours, Software Engineering Stream</li>
           <li>Carleton University Entrance Scholarship (2014)</li>
           <li>Henry Marshall Tory Scholarship (2015)</li>
-          <li>Chalmers jack MacKenzie Scholarship (2016)</li>
-          <li>Dean's Honour List (2015, 2016)</li>
+          <li>Chalmers Jack MacKenzie Scholarship (2016)</li>
+          <li>Deans' Honour List (2015, 2016)</li>
         </ul>
 		
         <h3>MacEwan University 2011 - 2014</h3>
@@ -135,6 +135,8 @@
           <li>Minor: Earth Sciences</li>
         </ul>
 			
+        <p><a href="pdfs/Joel Sprinkle - Resume.pdf" target="_blank">PDF Version</a></p>
+        
       </section>
       <footer>
         <p><script type="text/javascript">writeMe();</script><img src="images/Write/318-108266.jpg" height="32"></a>
