--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h2>Skills</h2>
         <ul>
           <li>Languages: C, C++, Java, JavaScript, Python</li>
-          <li>Completed <a href="https://www.codecademy.com" target="_blank">codecademy</a> courses on: HTML & CSS, JavaScript, jQuery, Ruby</li>
+          <li>Completed <a href="https://www.codecademy.com" target="_blank">codecademy</a> courses: HTML & CSS, JavaScript, jQuery, Ruby</li>
         </ul>
 		
         <h2>Related Work Experience</h2>
