changed file name

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <li>Minor: Earth Sciences</li>
         </ul>
 			
-        <p><a href="pdfs/Joel Sprinkle - Resume.pdf" target="_blank">PDF Version</a></p>
+        <p><a href="pdfs/Joel_Sprinkle_Resume.pdf" target="_blank">PDF Version</a></p>
         
       </section>
       <footer>
