--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
           <li><a href="https://www.samba.org" target="_blank">Samba</a> - SMB shares</li>
           <li><a href="https://www.cups.org" target="_blank">CUPS</a> - Print server for a USB printer</li>
           <ul class="sublist">
-            <li>Fun Fact: You can setup CUPS so that you are able to print wirelessly print from iOS devices to your printer(s)</li>
+            <li>Fun Fact: You can setup CUPS so that you are able to print wirelessly from iOS devices to your printer(s)</li>
           </ul>
           <li><a href="https://www.plex.tv" target="_blank">Plex</a> - Media server</li>
           <li><a href="https://www.duckdns.org" target="_blank">Duck DNS</a> - DNS services</li>
-          <li><a href="http://ajenti.org" target="_blank">Ajenti</a> - Provides a web interface to monitor your server. Allows you to add cron jobs, setup Samba shares, upgrade packages, as well as many other functions.</li>
+          <li><a href="http://ajenti.org" target="_blank">Ajenti</a> - Provides a web interface to monitor the server. Allows you to add cron jobs, setup Samba shares, upgrade packages, as well as many other functions.</li>
         </ul>
 
         <h2>cuPID</h2>
