--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				
         <hr class="style-two">
         <h1 id="resume">#Resume</h1>
-        <p>Hey, as I mentioned above, I just graduated from Carleton University and I am actively looking for full-time employment in the software development world. If you are interested in hiring me check out my LinkedIn or drop me an email.</p> 
+        <p>As I mentioned above, I just graduated from Carleton University and I am actively looking for full-time employment in the software development industry. If you are interested in hiring me check out my LinkedIn or drop me an email.</p> 
 				
         <h2>Skills</h2>
         <ul>
