--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
         <h1>Joel Sprinkle</h1>
-        <img class="portrait" src="images/Me/me2.png" alt="Me" width="200">
+        <img class="portrait" src="images/Me/me2.PNG" alt="Me" width="200">
         <p>BCS - Graduated With High Distinction<br>Carleton University, 2017</p>
         
         <div id="movebadges"><p><script type="text/javascript">writeMe();</script><img src="images/Write/318-108266.jpg" height="32"></a>
