changed slideshow previews for small screens

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 				
         
         <div class="picbox">
-          <img src="images/Me/bouldering in BC.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow imgshadow icntr"> 
-          <img src="images/Me/skateboarding.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow imgshadow icntr">
+          <img src="images/Me/bouldering in BC.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow imgshadow fillbox"> 
+          <img src="images/Me/skateboarding.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow imgshadow fillbox">
         </div>
 
 
