added about info

--- a/rr-scorekeeper.html
+++ b/rr-scorekeeper.html
@@ -194,8 +194,16 @@
       
       <div class="container boxes">
         <h3 class="offset" id="about">About</h3>
-        <p>This project was built using <a href="https://nodejs.org" target="_blank">Node</a>, <a href="https://expressjs.com" target="_blank">Express</a>,  <strike> <a href="https://github.com/pugjs/pug/issues/2184" target="_blank">jade</a></strike>, <a href="https://pugjs.org/api/getting-started.html" target="_blank">pug</a>,  <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>, and <a href="http://jquery.com" target="_blank">jQuery</a>.</p>
-        <p> <small style="color:grey;">Created by: <a href="https://sprinklej.github.io" target="_blank">Joel Sprinkle</a></small></p>
+        <p>This project was originally built using 
+          <a href="https://nodejs.org" target="_blank">Node</a>,
+          <a href="https://expressjs.com" target="_blank">Express</a>,
+          <strike> <a href="https://github.com/pugjs/pug/issues/2184" target="_blank">jade</a></strike>,
+          <a href="https://pugjs.org/api/getting-started.html" target="_blank">pug</a>,
+          <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>,
+          and <a href="http://jquery.com" target="_blank">jQuery</a>
+          and has been modified to be displayed here.
+          <br>The original code is <a href="https://github.com/sprinklej/RR-WebApp" target="_blank">here</a>.</p>
+        <p><small style="color:grey;">Created by: <a href="https://sprinklej.github.io" target="_blank">Joel Sprinkle</a></small></p>
       </div>
       
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
