--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2 id="rr-scorekeeper">RR-ScoreKeeper</h2>
         <img src="images/Projects/RR Screen Shot.png" title="RR-ScoreKeeper" alt="RR-ScoreKeeper screen shot">
         <p>RR-ScoreKeeper (Riondel Rummy Score Keeper) is a web app that I am currently developing to get reacquainted with front-end development and node.js. The project is being built using Node, Express, <strike>jade</strike>, pug, Bootstrap, and jQuery. The purpose of RR-ScoreKeeper is to provide an easy to use interface for players of the Riondel Rummy to keep track of what combination of cards they are trying to lay down, as well to keep score. The site also includes instructions on how to play the game.
-        <br><br>Non-node.js version of the page see <a href="rr-scorekeeper.html">here</a>.
+        <br><br>A non-node.js version of the page is <a href="rr-scorekeeper.html">here</a>.
         <br><a href="https://github.com/sprinklej/RR-WebApp" target="_blank">Code</a></p>
         
         <h2>MusicXML Parser</h2>
