--- a/rr-scorekeeper.html
+++ b/rr-scorekeeper.html
@@ -203,7 +203,7 @@
           and <a href="http://jquery.com" target="_blank">jQuery</a>
           and has been modified to be displayed here.
           <br>The original code is <a href="https://github.com/sprinklej/RR-WebApp" target="_blank">here</a>.</p>
-        <p><small style="color:grey;">Created by: <a href="https://sprinklej.github.io" target="_blank">Joel Sprinkle</a></small></p>
+        <p><small style="color:grey;">Created by: <a href="index.html">Joel Sprinkle</a></small></p>
       </div>
       
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
