--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1 id="projects">#Projects</h1>
         <h2 id="rr-scorekeeper">RR-ScoreKeeper</h2>
         <img src="images/Projects/RR Screen Shot.png" title="RR-ScoreKeeper" alt="RR-ScoreKeeper screen shot">
-        <p>RR-ScoreKeeper (Riondel Rummy Score Keeper) is a web app that I am actively developing to get reacquainted with front-end development and node.js. The project is being built using Node, Express, <strike>jade</strike>, pug, Bootstrap, and jQuery. The purpose of RR-ScoreKeeper is to provide an easy to use interface for players of Riondel Rummy to keep track of what combination of cards they are trying to lay down, as well to keep score. The site also includes instructions on how to play the game.
+        <p>RR-ScoreKeeper (Riondel Rummy Score Keeper) is a web app that I am actively developing to get reacquainted with front-end development and node.js. The project is being built using Node, Express, <strike>jade</strike>, pug, Bootstrap, and jQuery. The purpose of RR-ScoreKeeper is to provide an easy to use interface for players of Riondel Rummy to keep track of what combination of cards they are trying to lay down, as well as to keep score. The site also includes instructions on how to play the game.
         <br><br>A non-node.js version of the page is <a href="rr-scorekeeper.html">here</a>.
         <br><a href="https://github.com/sprinklej/RR-WebApp" target="_blank">Code</a></p>
         
@@ -44,9 +44,7 @@
         <br><br><a href="https://service.scs.carleton.ca/content/honours-project-joel-sprinkle" target="_blank">Abstract</a>
         <br><a href="https://github.com/sprinklej/musicXML" target="_blank">Code</a></p>
 
-
         <h2>Ubuntu Server</h2>
-
         <img class="imgshadow" src="images/Projects/Ajenti dashboard.png" title="Ajenti dashboard" alt="Ajenti dashboard" width="450">
         <p>I wanted a NAS device but after looking at several that were available for purchase, I realized that I wanted something with more flexibility. In building an Ubuntu server, I was able to create the functionality of a NAS device but also got something that I can continue to tinker with and learn from.</p>
           
