--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="google-site-verification" content="lbTCg53bKcUgBsg6EdSEf4gqTsPETDSSrjqJRYJyMzg" />
     <title>Joel Sprinkle</title>
 
     <script type="text/javascript" src="javascripts/scripts.js"></script>
