added schema.org info

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html>
   <head>
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "CreativeWork",
+      "url": "https://sprinklej.github.io",
+      "name": "Joel Sprinkle's Portfolio",
+      "description": "My personal website/portfolio for software projects that I have worked on",
+      "author": "Joel Sprinkle"
+    }
+    </script>
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="google-site-verification" content="lbTCg53bKcUgBsg6EdSEf4gqTsPETDSSrjqJRYJyMzg" />
