--- a/rr-scorekeeper.html
+++ b/rr-scorekeeper.html
@@ -186,7 +186,7 @@
           <li>Aces are high</li>
           <li>2's and Jokers are wild</li>
           <li>When a set or run is laid down no more than 50% of the cards can be wild cards, i.e. 5♠︎, Joker, Joker is not valid</li>
-          <li>During a single round sets cannot be repeated, i.e. if a player has laid down the set 5♣︎, 5♣︎, 5♣︎, another player cannot play that set until the next round</li>
+          <li>During a single round sets cannot be repeated, i.e. if a player has laid down a set of 9's, another player cannot play a set of 9's until the next round</li>
           <li>If the pickup pile is depleted during a round the discard pile is shuffled and then becomes a new pickup pile </li>
         </ul>
       </div>
