--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
         <h2>Skills</h2>
         <ul>
           <li>Languages: C, C++, Java, JavaScript, Python</li>
+          <li>Connecting to and accessing SQL and NoSQL databases: SQLite, MongoDB</li>
           <li>Completed <a href="https://www.codecademy.com" target="_blank">codecademy</a> courses: HTML & CSS, JavaScript, jQuery, Ruby</li>
+          <li>Can work in: Mac, Linux, Windows</li>
         </ul>
 		
         <h2>Related Work Experience</h2>
